Training programs already assigned to employee pre-selected on edit

--- a/Views/Employee/Edit.cshtml
+++ b/Views/Employee/Edit.cshtml
@@ -1,4 +1,4 @@
-@model Workforce.Models.ViewModels.EmployeeEdit
+@model Workforce.Models.ViewModels.EmployeeEditViewModel
 
 @{
     ViewData["Title"] = "Edit";
