--- a/Views/Employee/Edit.cshtml
+++ b/Views/Employee/Edit.cshtml
@@ -24,14 +24,8 @@
                 <span asp-validation-for="Employee.LastName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Employee.DepartmentId" class="control-label"></label>
-                <select asp-for="Employee.DepartmentId" class="form-control" asp-items="Model.Departments"></select>
-                <span asp-validation-for="Employee.DepartmentId" class="text-danger"></span>
-            </div>
-
-            <div class="form-group">
                 <label asp-for="Departments" class="control-label"></label>
-                @Html.DropDownListFor(m => m.Departments, 
+                @Html.DropDownListFor(m => m.Employee.DepartmentId, 
                                  Model.Departments,
                                  new { @class="form-control" })
             </div>
